# contracts/document/src/models/WorkshopDoc.ts
@@ -2,6 +2,4 @@
 /* istanbul ignore file */
 /* tslint:disable */
 /* eslint-disable */
-export type WorkshopDoc = {
-};
-
+export type Workshop = {};
