# openapi.json
@@ -20,9 +20,7 @@
             }
           }
         },
-        "tags": [
-          "Navigation"
-        ]
+        "tags": ["Navigation"]
       }
     },
     "/navigation/workshops": {
@@ -46,16 +44,14 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/WorkshopDoc"
+                    "$ref": "#/components/schemas/Workshop"
                   }
                 }
               }
             }
           }
         },
-        "tags": [
-          "Navigation"
-        ]
+        "tags": ["Navigation"]
       }
     },
     "/navigation/workshop/create-workshop": {
@@ -78,15 +74,13 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/WorkshopDoc"
+                  "$ref": "#/components/schemas/Workshop"
                 }
               }
             }
           }
         },
-        "tags": [
-          "Navigation"
-        ]
+        "tags": ["Navigation"]
       }
     },
     "/navigation/workshop/edit-workshop-name-and-summary": {
@@ -109,15 +103,13 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/WorkshopDoc"
+                  "$ref": "#/components/schemas/Workshop"
                 }
               }
             }
           }
         },
-        "tags": [
-          "Navigation"
-        ]
+        "tags": ["Navigation"]
       }
     },
     "/navigation/workshop/delete-workshop-and-workshop-documents": {
@@ -136,9 +128,7 @@
             }
           }
         },
-        "tags": [
-          "Navigation"
-        ]
+        "tags": ["Navigation"]
       }
     },
     "/navigation/workshop/sort-workshops": {
@@ -166,16 +156,14 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/WorkshopDoc"
+                    "$ref": "#/components/schemas/Workshop"
                   }
                 }
               }
             }
           }
         },
-        "tags": [
-          "Navigation"
-        ]
+        "tags": ["Navigation"]
       }
     },
     "/navigation/page/create-page": {
@@ -198,15 +186,13 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/WorkshopDoc"
+                  "$ref": "#/components/schemas/Workshop"
                 }
               }
             }
           }
         },
-        "tags": [
-          "Navigation"
-        ]
+        "tags": ["Navigation"]
       }
     },
     "/navigation/page/delete-page-and-update-workshop": {
@@ -235,9 +221,7 @@
             }
           }
         },
-        "tags": [
-          "Navigation"
-        ]
+        "tags": ["Navigation"]
       }
     },
     "/navigation/page/edit-page-name-update-workshop": {
@@ -266,9 +250,7 @@
             }
           }
         },
-        "tags": [
-          "Navigation"
-        ]
+        "tags": ["Navigation"]
       }
     },
     "/navigation/page/sort-pages": {
@@ -309,9 +291,7 @@
             }
           }
         },
-        "tags": [
-          "Navigation"
-        ]
+        "tags": ["Navigation"]
       }
     },
     "/workshop/workshops": {
@@ -333,9 +313,7 @@
             }
           }
         },
-        "tags": [
-          "Workshop"
-        ]
+        "tags": ["Workshop"]
       }
     },
     "/workshop/{objectId}": {
@@ -354,9 +332,7 @@
             }
           }
         },
-        "tags": [
-          "Workshop"
-        ]
+        "tags": ["Workshop"]
       }
     },
     "/workshop/update-workshop-html": {
@@ -375,9 +351,7 @@
             }
           }
         },
-        "tags": [
-          "Workshop"
-        ]
+        "tags": ["Workshop"]
       }
     }
   },
@@ -432,11 +406,9 @@
             }
           }
         },
-        "required": [
-          "sections"
-        ]
+        "required": ["sections"]
       },
-      "WorkshopDoc": {
+      "Workshop": {
         "type": "object",
         "properties": {}
       },
@@ -456,11 +428,7 @@
             "description": "Position of the doc item in the section's list"
           }
         },
-        "required": [
-          "_id",
-          "name",
-          "sortId"
-        ]
+        "required": ["_id", "name", "sortId"]
       },
       "CreateWorkshopDto": {
         "type": "object",
@@ -499,12 +467,7 @@
             "format": "date-time"
           }
         },
-        "required": [
-          "_id",
-          "sectionId",
-          "name",
-          "summary"
-        ]
+        "required": ["_id", "sectionId", "name", "summary"]
       },
       "UpdateWorkshopDto": {
         "type": "object",
@@ -554,10 +517,7 @@
             "type": "number"
           }
         },
-        "required": [
-          "acknowledged",
-          "deletedCount"
-        ]
+        "required": ["acknowledged", "deletedCount"]
       },
       "WorkshopDocumentDto": {
         "type": "object",
@@ -613,10 +573,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "page",
-          "workshopId"
-        ]
+        "required": ["page", "workshopId"]
       },
       "WorkshopDto": {
         "type": "object",
